# linkportal-backend

./: .env.example  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  run.sh
.github/: CLA.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/build-app-binary/: action.yml
.github/actions/build-app-images/: action.yml
.github/actions/build-images/: action.yml
.github/actions/build-linux-artifacts/: action.yml
.github/actions/build-macos-artifacts/: action.yml
.github/actions/build-windows-artifacts/: action.yml
.github/actions/publish-github-release/: action.yml
.github/actions/release-cn-artifacts/: action.yaml
.github/actions/upload-artifacts/: action.yml
.github/scripts/: copy-image.sh  upload-artifacts-to-s3.sh
.github/workflows/: dev-build.yml  develop.yml  nightly-build.yml  release.yml
docs/deploy/: deploy-on-docker.md  deploy-on-kubernetes.md
docs/devel/: 2.build-and-test-for-dev.md
docs/how-to/: how-to-profile-memory.md
etc/: linkportal-backend.yaml  linkportal.yaml
etc/abi/linkportal/: RealEstateToken.json
etc/abi/linkportal/v20250425/: RealEstateIssuer.json  (+4 more)
src/cmd/: Cargo.toml
src/cmd/src/cmd/: forwarder.rs  management.rs  mod.rs  server.rs  standalone.rs  updater.rs
src/forwarder/: Cargo.toml
src/forwarder/src/: forwarder_base.rs  forwarder_http.rs
src/server/: Cargo.toml
src/types/: Cargo.toml
src/types/src/: lib.rs
src/updater/: Cargo.toml
src/updater/src/: lib.rs  updater_base.rs  updater_eth_event.rs  updater_eth_txlog.rs  updater_ethereum_event.rs  updater_simple_llm.rs  updater_sol_txlog.rs
src/updater/tests/: integration.rs
src/utils/: Cargo.toml
src/utils/src/: lib.rs
tooling/: run.sh
tooling/deploy/compose/: docker-compose.yaml
(+76 files in other folders)
